# underwater_docking

./: .codespellrc  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements-build.txt  requirements-dev.txt  underwater_docking.repos
.devcontainer/nouveau/: Dockerfile  devcontainer.json
.devcontainer/nvidia/: Dockerfile  devcontainer.json
.devcontainer/robot/: Dockerfile  devcontainer.json
.docker/: Dockerfile
.docker/compose/: nouveau-desktop.yaml  nvidia-desktop.yaml  robot.yaml
.github/workflows/: ci.yml  docker.yml  format.yml
docking_control/: CMakeLists.txt  package.xml  setup.py
docking_control/config/: ardusub_stable.params  auv_bluerov2.yaml  auv_bluerov2_heavy.yaml  ekf.yaml  manager.yaml  marker_offsets  mpc_bluerov2.yaml  mpc_bluerov2_heavy.yaml  test_params.yaml
docking_control/config/in_air/: ost.txt  ost.yaml
docking_control/config/in_water/: ost.txt  ost.yaml
docking_control/data/: T200_data_16V.csv  topics.txt
docking_control/launch/: mav_pluginlists.yaml  mission_control.launch
docking_control/model/bluerov2_heavy/: config.xacro  urdf.xacro
docking_control/model/t200/: urdf.xacro
docking_control/rviz/: bluerov.rviz
docking_control/src/: actag_code.py  actag_detect.py  auto_dock.py  auv_hinsdale.py  manager.py  marker_detection.py  mission_control.py  mpc_acados.py  mpc_casadi.py  mpc_external_cost.py  mpc_sogp_cbf.py  mpc_warmstart.py  odl_controller.py  sogp.py  video.py  webcam.py
docking_control/src/docking_control/: auto_dock.py  auv_hinsdale.py  manager.py  marker_detection.py  mission_control.py  mpc_acados.py  mpc_casadi.py  pwm_publish_node.py  video.py
docking_control/utils/: compute_hydrodynamics.py  decode_sonar_log.py  rrt.py  sonar_to_grid_map.py
example_pkg/: CMakeLists.txt  package.xml
