<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>docking_control</name>
  <version>0.0.1</version>
  <description>ROS1 package for autonomous docking using MPC</description>

  <maintainer email="vivekanr@oregonstate.edu">Rakesh Vivekanandan</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/underwater_docking.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/underwater_docking/issues</url>

  <author>Rakesh Vivekanandan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-opencv</depend>
  <depend>python3-pandas</depend>
  <depend>python3-tqdm</depend>
  <depend>casadi-pip</depend>
  <depend>mavros_msgs</depend>
  <depend>robot_localization</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joy</depend>
  <depend>cv_bridge</depend>

  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>

  <!-- <build_depend>octomap</build_depend>
  <build_depend>octomap-msgs</build_depend>
  <build_depend>octomap-ros</build_depend>
  <build_depend>octomap-rviz-plugins</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>ompl-dbgsym</build_depend>
  <build_depend>greensea_msgs</build_depend>
  <build_export_depend>greensea_msgs</build_export_depend>
  <exec_depend>greensea_msgs</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
