<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>example_pkg</name>
  <version>0.0.1</version>
  <description>A sample ROS package</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/ros-template.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/ros-template/issues</url>

  <author>Evan Palmer</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
